    * #1590: [Assets and Drivers] Byte arrays are not displayed properly
    * #1588: Password arrays are not well managed by ConfigurationService
    * #1585: [Messaging] Share cloud connection with external applications
    * #1575: [Watchdog Service] Write the last reboot cause to a persistent file
    * #1564: [MqttDataTransport] wss connections without hostname verification do not work
    * #1556: connect.retry-interval=0 causes DataService activation failure
    * #1541: Add support for polling to GPIO example
    * #1531: Create "Drivers and Assets" tab
    * #1530: Modify the wire composer to allow driver management
    * #1517: Verify compatibility of the old Bluetooth implementation with Bluez 5.43
    * #1513: H2 DB: Web app and TCP server are mutually exclusive
    * #1511: Add Artemis broker to Kura core
    * #1506: H2 DB: Changing the db user does not work
    * #1502: H2 DB: Default service can be deleted
    * #1501: H2 DB: invalid service configuration not indicated
    * #1471: [Wires] Deleting a Timer instance might stop all other Timers
    * #1462: Wire Components list has no scrollbar
    * #1455: Wiki page documenting H2 use cases
    * #1453: Remove unused lib directory from org.eclipse.kura.linux.usb
    * #1447: New BLE beacon/advertisement API
    * #1442: Add TinyB host and fragment bundles in target-platform
    * #1435: Snapshot problem on wires
    * #1429: Support arm 64 bits platform
    * #1421: Replace HSQLDB with H2
    * #1420: Promote Assets and Drivers like Cloud Services in the Web UI
    * #1417: Implement DataService connection monitor as a CriticalComponent
    * #1416: Limit the rate of messages published by the DataService
    * #1413: Implementation of a SensorTag Kura Driver
    * #1412: Beacon/advertisement implementation of the new BLE API
    * #1411: GATT Implementation of the new Bluetooth Low Energy API
    * #1409: New Bluetooth Low Energy API
    * #1405: Fix trivial Sonar Lint problems in the network bundles